# Sentinel-AI

./: DEVELOPMENT_LOG.md  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml  test_config.py
backend/app/core/: config.py
backend/requirements/: base.txt  dev.txt
docs/: 00_Project_Charter.md  01_Product_Vision.md  02.5_Platform_Modules.md  02_System_Architecture.md  03_Technology_Stack.md  04_Base_Agent_Framework.md  05_Shared_Tool_Framework.md  06_Shared_Memory_Framework.md  07_Agent_Communication.md  08_Agent_Orchestrator.md
paper/: Chapter_4_Proposed_Architecture_Sentinel_AI_v0.3.docx  README.md  Sentinel_AI_Architecture_Whitepaper_v0.1.docx  Sentinel_AI_Architecture_Whitepaper_v0.2_ORCID.docx  architecture_landscape.md  comparison.md  comparison_matrix.md  references.md  related_work_matrix.md
paper/literature/frameworks/: autogen.md
paper/research/: CrewAI.md  LangChain.md  LangGraph.md  README.md  agentic-rag.md  openai-agents-sdk.md  semantic-kernel.md
