[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "0.1.0"
description = "Enterprise Multi-Agent AI Platform for Public Safety"
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Rahul Teja B" }
]

keywords = [
    "AI",
    "Multi-Agent",
    "FastAPI",
    "RAG",
    "LangGraph",
    "Public Safety",
    "Chicago Police"
]